<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Translator</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_note">© Teleca Poland sp. z o.o. 2009–2011</string>
    <string name="about_address">Teleca Poland Sp. z o.o.\n6 Kasprzaka Street\n90–083 Lodz, Poland</string>
    <string name="about_link">android@teleca.com</string>
    <string name="about_contact">Questions, bug reports or any feedback</string>
    <string name="about_teleca">About Developers</string>
    <string name="about_jamendo">About Jamendo</string>
    <string name="terms_of_use">Jamendo Player accesses to the music catalog of JAMENDO.\n\nJAMENDO is an online platform that distributes musical works under Creative Commons licenses.\n\nPlease read these Terms and Conditions of Use carefully: By using JAMENDO and by becoming a member of JAMENDO, you commit to comply with them in all respects.</string>
    <string name="terms_button">Open Terms and Conditions of Use in the Browser</string>
    <string name="credits">Credits</string>
    <string name="maintainers">Development team</string>
    <string name="contributors">Contributors</string>
    <string name="gestures_preference_title">Gestures</string>
    <string name="gestures_preference_summary">Preferences related to gestures support</string>
    <string name="gestures_support">Gestures enabled</string>
    <string name="gestures_support_summary">Enables gestures support in Jamendo</string>
    <string name="tutorial_welcome">This tutorial screen contains a few tips you might find useful so check it out!</string>
    <string name="tutorial_title">Welcome to Jamendo Player!</string>
    <string name="tutorial_gesture_next">Next song</string>
    <string name="tutorial_gesture_prev">Previous song</string>
    <string name="tutorial_gesture_playpause">Play/Pause song</string>
    <string name="tutorial_gesture_stop">Stop song</string>
    <string name="tutorial_gestures">Gestures:</string>
    <string name="tutorial_toggle_firstrun">Skip this next time</string>
    <string name="tutorial_shufflerepeat">Shuffle/Repeat:</string>
    <string name="tutorial_shufflerepeat_playlist">Touch album art to show all controls and also to reveal new shuffle/repeat toggle buttons</string>
    <string name="tutorial_close">Press [BACK] to close this screen</string>
    <string name="preference_reset_title">Reset settings</string>
    <string name="preference_firstrun_reset_title">Reset welcome screen</string>
    <string name="preference_firstrun_reset_summary">Show welcome screen on next program start</string>
    <string name="preference_username_title">User name</string>
    <string name="preference_username_summary">Personalize your Jamendo client</string>
    <string name="preference_codec_title">Download format</string>
    <string name="preference_codec_summary">Select your preferred codec</string>
    <string name="preference_cache_title">Cache option</string>
    <string name="preference_cache_summary">Select size for caching</string>
    <string name="preference_wifi_only_title">Wifi only mode</string>
    <string name="preference_wifi_only_summary">Listen only in wifi network area</string>
    <string name="preference_roaming_title">Roaming protection</string>
    <string name="preference_roaming_summary">Disable listening abroad</string>
    <string name="preference_3rdparty_title">3rd Party Applications</string>
    <string name="preference_3rdparty_summary">Interaction with outside applications</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    
    <string name="voice_recognition_prompt">This activity demonstrates the voice recognition APIs.</string>
    <string name="speak_button">Speak!</string>
    <string name="voice_recognition_results">Results:</string>
    

</resources>